# 30llm-testgen

./: Makefile  README.md  pyproject.toml
adsp/: __init__.py  dataset.py  features.py  plots.py
adsp/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
llm30/: __init__.py  dataset.py  example.py  features.py  plots.py
llm30/modeling/: predict.py  train.py
notebooks/: 00_getting_started_colab.ipynb  00_getting_started_local.ipynb
