[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "30llm"
version = "0.0.1"
description = "30llm: Multi-Agent LLM Systems for Collaborative Test Case Generation"
authors = [
  { name = "team 1" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10.0"

[tool.flit.module]
name = "llm30"


[tool.ruff]
line-length = 99
src = ["llm30"]
include = ["pyproject.toml", "llm30/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["llm30"]
force-sort-within-sections = true
